--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -34,6 +38,7 @@ hr {
   bottom: 0;
   z-index: 100;
   width: 400px;
+  overflow-y: visible;
 }
 
 .wrapper {
@@ -60,6 +65,14 @@ hr {
   text-align: center;
   font-weight: normal;
   font-size: 2.1rem;
+}
+
+.main {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .toggler {
@@ -92,9 +105,7 @@ hr {
 
 .nav ul {
   padding-left: 70px;
-}
-.nav i {
-  padding-right: 20px;
+  position: relative;
 }
 
 .nav-items {
@@ -133,9 +144,11 @@ hr {
   align-items: center;
   font-size: 1.2rem;
   padding: 30px;
+  transition: all 0.3s ease;
 }
 .nav-links i {
   margin-right: 20px;
+  padding-right: 20px;
 }
 
 .social {
@@ -157,6 +170,11 @@ hr {
   margin-bottom: 15px;
 }
 
+.social-icons {
+  color: #0CC;
+  transition: all 0.3s ease;
+}
+
 .social-link:hover i {
   color: #3b5998;
   cursor: pointer;
@@ -175,34 +193,23 @@ hr {
 
 .form {
   display: flex;
+  align-items: center;
   justify-content: flex-end;
-  padding-bottom: 8%;
 }
 
 .form .search-input {
-  display: inline;
+  display: block;
   height: 60px;
   width: 480px;
-  align-items: center;
-  justify-content: flex-end;
   margin-right: 30px;
   border-color: #0CC;
   font-size: 1.2rem;
-  display: flex;
-  justify-content: flex-end;
-}
-
-.search-input {
-  height: 45px;
-  border-color: #0CC;
-  border-radius: 3px;
 }
 
 .search-button {
   width: 60px;
   height: 60px;
   border: none;
-  border-radius: 3px;
   background-color: #0CC;
   transition: all 0.3s ease;
 }
@@ -216,6 +223,10 @@ hr {
   cursor: pointer;
 }
 
+.search-button, .search-input {
+  border-radius: 3px;
+}
+
 .article {
   max-width: 470px;
   margin-bottom: 75px;
@@ -226,6 +237,7 @@ hr {
   position: relative;
   cursor: pointer;
   text-decoration: none;
+  padding-top: 60px;
 }
 .post img {
   position: relative;
@@ -235,8 +247,16 @@ hr {
   opacity: 0.8;
 }
 
+.row {
+  max-width: 980px;
+  justify-content: space-between;
+}
+
 .post-title {
   color: #0e9b9b;
+  font-size: 1.7rem;
+  transition: all 0.3s ease;
+  padding-top: 30px;
 }
 
 .post:hover .post-title {
@@ -247,12 +267,13 @@ hr {
 }
 
 .articles-container {
-  max-width: 980px;
+  max-width: 1100px;
   justify-content: space-between;
   display: flex;
   flex-wrap: wrap;
   margin-right: -15px;
   margin-left: -15px;
+  padding-top: 30px;
 }
 
 .badge {
@@ -264,8 +285,13 @@ hr {
   padding: 5px 20px;
 }
 
+.article p {
+  padding-top: 30px;
+}
+
 .info-container {
   justify-content: space-between;
+  padding-top: 45px;
 }
 
 .info {
@@ -314,6 +340,7 @@ hr {
   background-color: #F0F0F0;
   color: #999;
   cursor: not-allowed;
+  margin-right: 20px;
 }
 
 .paging-wrapper {
@@ -326,6 +353,9 @@ hr {
   display: inline-block;
 }
 
+.paging-nav {
+  display: inline-block;
+}
 .paging-nav ul li {
   list-style: none;
   display: inline-block;
@@ -372,10 +402,70 @@ footer {
 .last-section {
   justify-content: space-between;
   display: flex;
+  max-width: 1100px;
+  margin-top: 100px;
+  margin-bottom: 75px;
 }
 
 .copyright {
   text-align: right;
+}
+
+/* Media Query */
+@media (max-width: 1510px) {
+  .aside {
+    width: 320px;
+  }
+
+  .social-link {
+    margin-right: 2px;
+  }
+
+  .container {
+    margin-left: 320px;
+    width: calc(100% - 320px);
+  }
+
+  .form {
+    justify-content: flex-start;
+  }
+
+  .prev-next-wrapper, .paging-wrapper, footer {
+    justify-content: flex-start;
+  }
+}
+@media (max-width: 900px) {
+  .aside {
+    width: 320px;
+    left: -320px;
+    transition: all 0.3s ease;
+  }
+
+  .toggler {
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: rgba(56, 204, 204, 0.75);
+    color: white;
+    padding: 10px 15px;
+    transition: all 0.3s ease;
+    border-radius: 0;
+    top: 5px;
+  }
+
+  .form {
+    justify-content: flex-start;
+    width: 70%;
+    max-width: 375px;
+    margin-right: 15px;
+  }
+
+  .container {
+    padding: 60px 10px;
+    margin-left: 80px;
+    width: calc(100% - 320px);
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
